web spreadsheet layout fixes (#3706): 1) allow custom row/column widths in web spreadsheet row header 2) better alignment of header cells
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@34375 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/web-styles.css
+++ b/web/src/geogebra/resources/css/web-styles.css
@@ -1732,18 +1732,6 @@ Paddings for menuitems.
 	text-align: center;
 }
 
-.geogebraweb-table-spreadsheet-upperLeftCorner {
-	box-sizing:content-box;
-	-webkit-box-sizing:content-box;
-	border-right: 1px solid gray;
-	border-bottom: 1px solid gray;
-	padding: 2px 0px;
-}
-
-.geogebraweb-table-spreadsheet-upperRightCorner {
-	border-bottom: 1px solid gray;
-	padding: 2px 0px;
-}
 
 .geogebraweb-table-spreadsheet-lowerLeftCorner {
 	border-right: 1px solid gray;
